--- a/src/views/swapi/Swapi.scss
+++ b/src/views/swapi/Swapi.scss
@@ -11,7 +11,7 @@
   padding: 1.875rem;
 
   &__title {
-    width: 300px;
+    width: 18.75rem;
   }
 
   &__container {
@@ -20,7 +20,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 1.25rem;
   }
 
   &__filters {
