--- a/src/views/tooles/Tooles.scss
+++ b/src/views/tooles/Tooles.scss
@@ -58,7 +58,7 @@
       padding-bottom: 0.25rem;
     }
   }
-  @media (max-width: 600px) {
+  @media (max-width: 37.5rem) {
     display: flex;
     flex-direction: column;
     flex: 1;
