--- a/src/views/swapi/Swapi.scss
+++ b/src/views/swapi/Swapi.scss
@@ -1,5 +1,5 @@
 .swapi {
-  background-image: url("img/star.jpg");
+  background-image: url("../../../public/img/star.jpg");
   background-size: cover;
   width: 100%;
   height: 100%;
